fixed header spacing

--- a/styles.css
+++ b/styles.css
@@ -66,9 +66,12 @@ h3 {
 }
 
 @media (min-width: 50em) {
+  .nav {
+    font-size: 1.2em;
+  }
   .logo {
-    height: 2.5em;
-    margin: 2em;
+    height: 3.5em;
+    margin: 3em;
   }
   .header-nav--item {
     padding: 2em;
@@ -82,10 +85,6 @@ h3 {
   text-align: center;
   padding-top: 3em;
   margin: 0 auto;
-}
-
-.hero-image {
-  width: 80%;
 }
 
 .hero-title {
@@ -102,6 +101,12 @@ h3 {
   width: 80%;
   background-color: hsl(176, 68%, 64%);
   border-radius: 2em;
+}
+
+@media (max-width: 50em) {
+  .hero-image {
+    max-width: 80%;
+  }
 }
 
 @media (min-width: 50em) {
